--- a/catus/templates/base.html
+++ b/catus/templates/base.html
@@ -210,7 +210,7 @@
 
       <!-- Footer Bottom -->
       <div class="footer-bottom">
-        <div class="footer-copyright">
+        <div class="footer-copyright text-center">
           Catpuccino Adopciones <span class="copyleft">&copy;</span> {{ current_year|default:2025 }}.
           Made with <i class="fa fa-heart"></i> by cat lovers
         </div>
