--- a/catus/static/css/base.css
+++ b/catus/static/css/base.css
@@ -525,6 +525,14 @@ footer .foot {
   padding: 14px;
   padding-left: 20px;
   padding-right: 20px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-preadopcion i {
+  margin-left: 8px;
+  display: inline-block;
 }
 
 .animalCarrousel {
