--- a/catus/templates/home/faq.html
+++ b/catus/templates/home/faq.html
@@ -121,6 +121,14 @@
                             <p>Si estás de acuerdo con el perfil del adoptante, podrás contactarlo para coordinar la entrega del animal.</p>
                         </div>
                     </div>
+
+                    <div class="como-funciona-step">
+                        <div class="step-number">6</div>
+                        <div class="step-content">
+                            <h5>Generar contrato de adopción (opcional)</h5>
+                            <p>Nuestro sitio provee un generador de contratos de adopción que podrás hacerle firmar al adoptante, formalizando así el compromiso de cuidado responsable del animal.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
