--- a/catus/templates/contrato/edit.html
+++ b/catus/templates/contrato/edit.html
@@ -371,7 +371,7 @@
         {% if not is_persona %}
         <div class="section-divider"></div>
         <div class="text-center">
-            <a id="btn-volver" class="btn btn-secondary btn-icon-left" href="/formularios/">
+            <a id="btn-volver" class="btn btn-secondary btn-icon-left" onclick="window.close()">
                 <i class="fa fa-arrow-left"></i> Volver
             </a>
         </div>
