--- a/catus/templates/forms/form.html
+++ b/catus/templates/forms/form.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="form-actions">
-                <a href="javascript:history.back()" class="btn btn-secondary">
+                <a onclick="window.close()" class="btn btn-secondary">
                     <i class="fa fa-arrow-left mr-2"></i> Volver
                 </a>
                 {% if estado_form.gato %}
