--- a/catus/templates/base.html
+++ b/catus/templates/base.html
@@ -72,8 +72,8 @@
     .post-image::after,
     .post-preview::before,
     .post-preview::after,
-    .post-preview *::before,
-    .post-preview *::after {
+    .post-preview *::before:not(.fa):not(.fas):not(.far):not(.fab),
+    .post-preview *::after:not(.fa):not(.fas):not(.far):not(.fab) {
       display: none !important;
       content: none !important;
       background: none !important;
